# wallet-core

codegen-v2/: Cargo.toml
codegen-v2/manifest/: TWCardano.yaml  TWCoinType.yaml  TWEthereum.yaml  TWPrivateKey.yaml  TWTransactionCompiler.yaml
codegen-v2/src/: main.rs  manifest.rs
codegen-v2/src/codegen/: mod.rs  template_generator.rs
dart/: Makefile  README.md  camel_case_to_snake_case.py  ffigen.yaml  generate_proto_index.sh  pubspec.yaml
dart/example/: .metadata  Makefile  README.md  dart_example.dart  pubspec.yaml
dart/example/lib/: main.dart
dart/include/: TWCoinType.yaml
dart/include/headers/: TWCardano.h
dart/lib/: trust_wallet_core.dart
dart/lib/protobuf/: Aeternity.pb.dart  Aeternity.pbjson.dart  Aeternity.pbserver.dart  Aion.pb.dart  Aion.pbjson.dart  Aion.pbserver.dart  Algorand.pb.dart  Algorand.pbjson.dart  Algorand.pbserver.dart  Aptos.pb.dart  Aptos.pbjson.dart  Aptos.pbserver.dart  Barz.pb.dart  Barz.pbenum.dart  Barz.pbjson.dart  Barz.pbserver.dart  Binance.pb.dart  Binance.pbjson.dart  Binance.pbserver.dart  Bitcoin.pb.dart  Bitcoin.pbenum.dart  Bitcoin.pbjson.dart  Bitcoin.pbserver.dart  Cardano.pb.dart  Cardano.pbjson.dart  Cardano.pbserver.dart  Common.pb.dart  Common.pbenum.dart  Common.pbjson.dart  Common.pbserver.dart  Cosmos.pb.dart  Cosmos.pbenum.dart  Cosmos.pbjson.dart  Cosmos.pbserver.dart  Decred.pb.dart  Decred.pbjson.dart  Decred.pbserver.dart  EOS.pb.dart  EOS.pbenum.dart  EOS.pbjson.dart  (+136 more)
dart/lib/src/: index.dart  (+1 more)
dart/src/: CMakeLists.txt  trust_wallet_core.c
tools/: dart-bindings  install-dart-dependencies-macos
(+63 files in other folders)
